--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,23 +8,28 @@
         android:minSdkVersion="17"
         android:targetSdkVersion="18" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="dd"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" 
+        android:name="com.houfubao.doctor.DoctorApplication">
         <activity
             android:name="com.houfubao.doctor.MainActivity"
-            android:label="dd" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.houfubao.doctor.OrderTraining" android:label="xx" />
-        <activity android:name="com.houfubao.doctor.RandomTraining" android:label="xx" />
-        
-        
+        <activity android:name="com.houfubao.doctor.OrderTraining" android:label="@string/order_training" />
+        <activity android:name="com.houfubao.doctor.RandomTraining" android:label="@string/ramdon_training" />
+
     </application>
 
 </manifest>
