--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,8 +27,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.houfubao.doctor.OrderTraining" android:label="@string/order_training" />
-        <activity android:name="com.houfubao.doctor.RandomTraining" android:label="@string/ramdon_training" />
+        <activity android:name="com.houfubao.doctor.OrderTrainingActivity" android:label="@string/order_training" />
+        <activity android:name="com.houfubao.doctor.RandomTrainingActivity" android:label="@string/ramdon_training" />
 
     </application>
 
