--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=android-19
+android.library=false
+android.library.reference.1=../Android/adt-bundle-windows-x86-20131030/sdk/extras/android/support/v7/appcompat
