--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/AppTheme" 
         android:name="com.houfubao.doctor.DoctorApplication">
         <activity
-            android:name="com.houfubao.doctor.MainActivity"
+            android:name="com.houfubao.doctor.MainTabActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +29,6 @@
         </activity>
         <activity android:name="com.houfubao.doctor.OrderTrainingActivity" android:label="@string/order_training" />
         <activity android:name="com.houfubao.doctor.RandomTrainingActivity" android:label="@string/ramdon_training" />
-        <activity android:name="com.houfubao.doctor.IconTabActivity" android:label="@string/function_test" />
         
     </application>
 
